<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>next-parent</artifactId>
        <groupId>xyz.cofe</groupId>
        <version>1.0</version>
        <relativePath>../next-parent</relativePath>
    </parent>

    <artifactId>xparse</artifactId>
    <version>1.1</version>

    <name>xparse</name>
    <description>parsing build tools</description>

    <dependencies>
        <dependency>
            <groupId>xyz.cofe</groupId>
            <artifactId>ecolls</artifactId>
            <version>1.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>8</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <source>8</source>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>